# urukrama

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt  docker-compose.yml
.github/workflows/: c-cpp.yml
src/: .clang-format  .clang-tidy  CMakeLists.txt  bounded_sorted_vector.hpp  distance.hpp  faiss.cpp  faiss.hpp  flat_map.hpp  graph.cpp  graph.hpp  graph.tpp  in_memory_graph.cpp  in_memory_graph.hpp  main.cpp  on_disk_fvecs.cpp  on_disk_fvecs.hpp  on_disk_graph.cpp  on_disk_graph.hpp  on_disk_lloyd.cpp  on_disk_lloyd.hpp  types.hpp  utils.cpp  utils.hpp
src/lib/logger/: CMakeLists.txt  logger.hpp
